# sshx

./: Dockerfile  README.md  docker-compose.yml  install.sh
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: auth.rs  main.rs  shared.rs
server/: Cargo.toml
server/src/: auth.rs  main.rs  shared.rs
