[package]
name = "sshx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sshx"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
